tests/ui/rust-2024/unsafe-extern-blocks/unsafe-on-extern-block-issue-126756.stderr
error: items in unadorned `extern` blocks cannot have safety qualifiers
  --> $DIR/unsafe-on-extern-block-issue-126756.rs:7:5
   |
LL |     unsafe fn foo();
   |     ^^^^^^^^^^^^^^^^
   |
help: add unsafe to this `extern` block
   |
LL | unsafe extern "C" {
   | ++++++

error: aborting due to 1 previous error

