tests/ui/rust-2024/unsafe-extern-blocks/unsafe-on-extern-block-issue-126756.rs
//@ run-rustfix

#![feature(unsafe_extern_blocks)]
#![allow(dead_code)]

extern "C" {
    unsafe fn foo(); //~ ERROR items in unadorned `extern` blocks cannot have safety qualifiers
}

fn main() {}
